[gd_scene load_steps=4 format=3 uid="uid://coiuojm6o1c8b"]

[ext_resource type="Script" path="res://Scripts/card_old.gd" id="1_0r35x"]
[ext_resource type="Texture2D" uid="uid://bgigd0n0g7yyg" path="res://Assets/Sprites/Cards/Creature/Charley.png" id="2_ulwqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igfsc"]

[node name="Card_old" type="Node2D"]
script = ExtResource("1_0r35x")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.49012e-08, -1.90735e-06)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_ulwqv")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(9.5, 13.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_igfsc")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
